...
                    onSubmitEditing={() => {
                        if (password) {
                            this.reentry.focus();
                        }
                    }}
                    secureTextEntry
                    testID="setPassword-passwordbox"
                    theme={theme}
                />
                <CustomTextInput
                    onRef={(c) => {
                        this.reentry = c;
                    }}
...
                    autoCapitalize="none"
                    autoCorrect={false}
                    enablesReturnKeyAutomatically
                    returnKeyType="done"
                    onSubmitEditing={() => this.checkPassword()}
                    secureTextEntry
                    testID="setPassword-reentrybox"
                    theme={theme}
                />
            </View>
        );
    }
}
...
