...
                                    secondaryCtaColor={secondary.body}
                                    text={t('pressForNewSeed')}
                                    onPress={() => {
                                        this.onGeneratePress();
                                    }}
                                    ctaWidth={width / 1.6}
                                    testID="newSeedSetup-newSeed"
                                />
                            </AnimatedComponent>
                            <TouchableOpacity
                                onPress={() => this.openModal()}
                                style={{ marginTop: height / 65, marginBottom: height / 80 }}
                            >
...
                            <AnimatedComponent animationInType={['fadeIn']} animationOutType={['fadeOut']} delay={0}>
                                <DualFooterButtons
                                    onLeftButtonPress={() => this.onBackPress()}
                                    onRightButtonPress={() => this.onNextPress()}
                                    leftButtonText={t('global:goBack')}
                                    rightButtonText={t('saveYourSeed:saveYourSeed')}
                                    leftButtonTestID="newSeedSetup-back"
                                    rightButtonTestID="newSeedSetup-next"
                                    rightButtonStyle={{ wrapper: { opacity } }}
                                />
                            </AnimatedComponent>
                        </View>
                    </View>
...
