...
                                        returnKeyType="done"
                                        onSubmitEditing={() => this.onDonePress()}
                                        maxLength={MAX_SEED_LENGTH}
                                        value={this.state.seed}
                                        widgets={['qr', 'mask']}
                                        onQRPress={() => this.onQRPress()}
                                        testID="enterSeed-seedbox"
                                        isSeedInput
                                    />
                                </AnimatedComponent>
                                <View style={{ flex: 0.1 }} />
                                <AnimatedComponent
                                    animationInType={['slideInRight', 'fadeIn']}
...
